[package]
name = "Stainless"
version = "0.1.0"
edition = "2021"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
bindgen = "0.69.1"


[dependencies]
bindgen = { version = "0.69.1", features = [] }
libc = { version = "0.2.150", features = [] }
queues = "1.0.2"